# validation

./: .ghci  .gitignore  .hlint.yaml  .ormolu  .travis.yml  LICENSE  README.md  Setup.hs  Setup.lhs  Validation.cabal  Validation.lkshw  cabal.project  changelog  default.nix  lower-bounds.project  shell.nix  validation.cabal  validation.nix
.github/workflows/: ci.yml
ci/: ci.nix  jobsets.json  jobsets.nix
examples/: Email.hs  LICENCE  LICENSE  Main.hs  Person.hs  PolymorphicEmail.hs  validation-examples.cabal
examples/src/: Email.hs  Main.hs  Person.hs  PolymorphicEmail.hs
src/Data/: Validation.hs  Validator.hs
test/: .ghci  Validation-Test.cabal  doctest_tests.hs  doctests.hs  hedgehog.hs  hedgehog_tests.hs  hunit.hs  hunit_tests.hs
test/src/: Main.hs
test/src/Data/Validation/: Tests.hs
