Name:               Validation-Test
Version:            0.1.0
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           Testing A data-type like Either but with an accumulating Applicative
Category:           Development
Description:        Testing A data-type like Either but with an accumulating Applicative
Homepage:           https://github.com/tonymorris/validation
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/validation.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          validation-test
  Hs-Source-Dirs:  
                    ../src src

  Main-Is: 
                    Main.hs

  Ghc-Options:
                    -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs
  
  Build-Depends:  
                   base < 5 && >= 3
                   , semigroups
                   , pointed
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

